# ad-net

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-config-commit.yaml  CONTRIBUTING.md  DATASET_IMPLEMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  Makefile  coverage.xml  docker-compose.yml  mypy.ini  pyproject.toml  setup.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: SECURITY.md  dependabot.yml  dependabot.yml.disabled  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dataset-tests.yml  dataset-tests.yml.disabled  pre-commit.yml  pre-commit.yml.disabled  release.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: arch.txt  camera_calibration.md  dataset.md  depth_estimation.md  hw_inference.md  overview.md  proj_tree.txt  project.md  tutorial.md
requirements/: api.txt  base.txt  dev.txt  training.txt  visualization.txt
src/adnet/: __init__.py  cli.py
src/adnet/data/datasets/: cross_dataset_validator.py  multi_dataset_loader.py  nuscenes_dataset.py
src/adnet/data/loaders/: temporal_loader.py
src/adnet/data/transforms/: transforms.py
src/adnet/interfaces/data/: dataset.py
tests/: __init__.py
tests/data/: __init__.py
tests/data/datasets/: __init__.py  test_cross_dataset_validator.py  test_multi_dataset_loader.py  test_nuscenes_dataset.py
tests/data/loaders/: __init__.py  test_temporal_loader.py
tests/data/transforms/: __init__.py  test_transforms.py
