# ADNet Package Configuration

[project]
name = "adnet"
version = "0.1.0"
description = "4D spatio-temporal object detection framework for advanced driving"
authors = [{name = "Surajit Dutta", email = "hello@surajit.de"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["machine-learning", "computer-vision", "3d-detection", "autonomous-driving", "4d-perception"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/surajroland/ad-net"

[project.scripts]
adnet = "adnet.cli:main"

# Build system configuration
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

# Version management with git tags
[tool.setuptools_scm]
write_to = "src/adnet/_version.py"

# Code formatting with Black
[tool.black]
line-length = 88
target-version = ["py312"]

# Import sorting with isort
[tool.isort]
profile = "black"
line_length = 88

# Linting with flake8
[tool.flake8]
max-line-length = 88

# Linting with Ruff
[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401"]

# Type checking with mypy
[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
exclude = ["tests/", "scripts/", "examples/"]

# Testing with pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests"
]